syntax = "proto3";

package v1.aspbv1;

import "v1/aspb/msg_anime_season.proto";
import "v1/nfpb/msg_meta.proto";
import "v1/nfpb/msg_genre.proto";
import "v1/nfpb/msg_studio.proto";
import "v1/ashpb/anime_tag.proto";
import "v1/ashpb/anime_resource.proto";
import "v1/ashpb/anime_image.proto";
import "v1/ashpb/anime_trailer.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message GetFullAnimeSeasonRequest {
  int64 seasonID   = 1;
  int32 languageID = 2;
}

message GetFullAnimeSeasonResponse {
  AnimeSeasonResponse           animeSeason            = 1;
  nfpbv1.AnimeMetaResponse      seasonMeta             = 2;
  ashpbv1.AnimeResourceResponse seasonResources        = 3;
  repeated nfpbv1.Genre seasonGenres                   = 4;
  repeated nfpbv1.Studio seasonStudios                 = 5;
  repeated ashpbv1.AnimeTag seasonTags                 = 6;
  repeated ashpbv1.ImageResponse seasonPosters         = 7;
  repeated ashpbv1.AnimeTrailerResponse seasonTrailers = 8;
}